--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "natours",
+  "name": "Trillo",
   "version": "1.0.0",
-  "description": "Landing page for natours",
+  "description": "Trillo app",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "sass ./sass/main.scss ./css/style.css -w",
-    "start": "npm-run-all --parallel live-server watch:sass",
-    
-    "compile:sass": "sass ./sass/main.scss ./css/style.comp.scss",
-    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
-    "compress:css": "sass css/style.prefix.css css/style.css --style=compressed",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css",
-    "live-server": "live-server"
-  },
+  "watch:sass": "sass ./sass/main.scss ./css/style.css -w",
+  "start": "npm-run-all --parallel live-server watch:sass",
+
+  "compile:sass": "sass ./sass/main.scss ./css/style.comp.css",
+  "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
+  "compress:css": "sass css/style.prefix.css css/style.css --style=compressed",
+  "build:css": "npm-run-all compile:sass prefix:css compress:css",
+  "live-server": "live-server"
+},
   "author": "Jonas",
   "license": "ISC",
   "devDependencies": {
